landingcorp/css/_template.scss
/* ... */
@media only screen and (max-width: 768px) {
  .slider_section {
    .info {
      h3 {
        font-size: 2.0625rem;
        letter-spacing: -0.4px;
        line-height: 2.625rem;
      }
    }
  }
  .news_section {
    background-color: $whiteColor;

    .news_section_container {
      top: 0;
      display: block;

      .single_news {
        &:hover {
          background-color: transparent;

          .eye_braw {
            color: #9396a2;
          }
          h3 {
            color: $blackColor;
          }
          p {
            color: $accentPrimaryColor;
          }
        }
      }
    }
  }

  .trusted_logo {
    .logo_list {
      .single_logo {
        margin: 20px auto;
        width: 50%;
        text-align: center;
      }
    }
  }

  .section_header_wrapper {
    .heading_title {
      font-size: 1.75rem;
      letter-spacing: -0.004em;
      line-height: 1.286em;
    }
    .heading_desc {
      font-size: 1.188rem;
      letter-spacing: 0.01em;
      line-height: 1.579em;
    }
  }

  .product_section {
    .product_section_area {
      .product_details_area {
        .product_details_wrapper {
          min-height: 0;
          margin-top: 60px;

          &:first-child {
            margin-top: 0;
          }
          .product_details {
            width: 100%;
            p {
              font-size: 15px;
              line-height: 26px;
            }

            ul {
              li {
                a {
                  svg {
                    float: right;
                  }
                }
              }
            }
          }
          .product_img {
            display: none;
          }
        }
      }
    }
  }

  .integrations_section {
    .integration_logo_list {
      .integration_logo {
        width: calc(33% - 32px);
      }
    }
  }

  .call_to_action_section {
    .call_to_action_title {
      h3 {
        margin-bottom: 25px;
      }
    }
    .call_to_action_info {
      p {
        font-size: 1rem;
      }
    }
  }

  .footer {
    .newsletter_wrapper {
      .newsletter_info {
        input {
          width: 100%;
          margin-bottom: 15px;
        }
        button {
          width: 100%;
        }
      }
    }
  }
}

@media only screen and (max-width: 575px) {
  .integrations_section {
    .integration_left_info {
      h3 {
        font-size: 1.75rem;
        letter-spacing: -0.004em;
        line-height: 1.286em;
      }
    }
  }
  .slider_section {
    .info {
      .search_wrapper {
        input {
          width: 100%;
          margin-bottom: 10px;
        }
        button {
          width: 100%;
        }
      }
    }
  }

  .integrations_section {
    .integration_logo_list {
      .integration_logo {
        width: calc(50% - 32px);
      }
    }
  }
}

